<resources>
    <string name="app_name">HSE KMG</string>
    <string name="default_notification_channel_id" translatable="false">11</string>

    <!--Navigation-->
    <string name="title_nav_home">Главная</string>
    <string name="title_nav_list">Список</string>
    <string name="title_nav_create">Создать</string>
    <string name="title_nav_notifications">Уведомления</string>
    <string name="title_nav_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qorgay">Коргау</string>
    <string name="quiz">Опросы</string>
    <string name="work_watching">Наблюдения работ</string>
    <string name="driving_watching">Наблюдения вождения</string>
    <string name="news">Новости</string>
    <string name="next">Далее</string>
    <string name="questionnaires">Опросы</string>
    <string name="observation_type">Тип наблюдения</string>
    <string name="retry">Повторить</string>
    <string name="full_name">Ваши ФИО</string>
    <string name="phone_number">Номер телефона</string>
    <string name="date_time">Дата и время</string>
    <string name="organization_contractor">"Организация/подрядчик "</string>
    <string name="department">Структурное подразделение</string>
    <string name="supervised_organization">Наблюдаемая компания/участок/объект</string>
    <string name="observation_category">Категория наблюдения</string>
    <string name="describe_suggestion">Опишите ваше наблюдение/предложение</string>
    <string name="photos_documents">Фото/документы с места выявления несоответствия или предложения</string>
    <string name="choose_date"><u>Выберите дату</u></string>
    <string name="choose_time"><u>Выберите время</u></string>
    <string name="organization">Организация</string>
    <string name="contractor">Подрядчик</string>
    <string name="select">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="choose_organization">Сначала выберите организацию</string>
    <string name="no_departments">В выбранной вами организации не заданы подразделения</string>
    <string name="supervised_organization2">Наблюдаемая компания</string>
    <string name="оbject">Участок/объект</string>
    <string name="pros">Какие возможные последствия или преимущества хорошей практики / вашего предложения?</string>
    <string name="measures">Какие меры вы предприняли?</string>
    <string name="action">Какие действия вы предприняли для поощрения хорошей практики?</string>
    <string name="discussed">Обсудили ли вы небезопасное действие / небезопасное поведение с наблюдаемым?</string>
    <string name="is_informed">Сообщили ли ответственному лицу?</string>
    <string name="inform_to">Кому вы сообщили о наблюдении? (Обязательно заполните для небезопасного действия / небезопасного поведения / опасного фактора / опасного случая)</string>
    <string name="is_eliminated">Было ли небезопасное условие / поведение исправлено и опасность устранена?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="choose_files">Выбрать файлы</string>
    <string name="available_formats">Доступны форматы: jpg, gif, png, txt, pdf, xls, doc</string>
    <string name="done">Готово</string>
    <string name="card_registered">Ваша карта зарегистрирована</string>
    <string name="no_data">Не введены данные</string>
    <string name="fill_empty_fields">Заполните все поля</string>
    <string name="online_notifications">Онлайн уведомления</string>
    <string name="notification_title">Qorgay</string>
    <string name="suggestion">Описание наблюдения/предложения</string>
    <string name="organization_name">Наименование организации</string>
    <string name="fullname">ФИО</string>
    <string name="no_items">Нет добавленных элементов</string>
    <string name="add">Добавить</string>
    <string name="system_login">Вход в систему</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="enter">Войти</string>
    <string name="profile">Профиль</string>
    <string name="incorrect_login_or_pass">Неверный логин или пароль</string>
    <string name="fill_login_and_pass">Заполните логин и пароль</string>
    <string name="email">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="birth_date">Дата рождения</string>
    <string name="skype">Skype</string>
    <string name="not_provided">Не задано</string>
    <string name="exit">Выйти</string>
    <string name="today">Сегодня</string>
    <string name="seen">Просмотренные</string>
    <string name="notifications">Уведомления</string>
    <string name="no_notifications">Уведомления отсутствуют</string>
    <string name="list">Список</string>
    <string name="my_reports">Мои отчеты</string>
    <string name="load_error">Ошибка загрузки</string>
    <string name="authorize">Авторизоваться</string>
    <string name="auth_to_see">Для просмотра данной страницы необходима авторизация</string>
    <string name="error">Ошибка</string>
    <string name="observer">Наблюдатель</string>
    <string name="org">Компания</string>
    <string name="fname_lname">ФИО</string>
    <string name="division">Отдел</string>
    <string name="choose"><u>Выбрать</u></string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="observable_count">Количество наблюдаемых</string>
    <string name="observable">Наблюдаемый</string>
    <string name="obs_org">Наблюдаемая компания</string>
    <string name="obs_org_div">Наблюдаемый отдел</string>
    <string name="observation_place">Место наблюдения</string>
    <string name="observation_place_specific">Место наблюдения уточненно</string>
    <string name="safe">Безопасно</string>
    <string name="dangerous">Опасно</string>
    <string name="not_selected">Не отмечается</string>
    <string name="comment">Комментировать</string>
    <string name="work_observations">Наблюдения работ</string>
    <string name="fill_in_the_card">Заполнить карту</string>
    <string name="choose_department">Сначала выберите подразделение</string>
    <string name="choose_place">Сначала выберите место наблюдения</string>
    <string name="no_place_items">Нет уточненных мест наблюдения</string>
    <string name="no_places">В данной организации отсутствуют места наблюдения</string>
    <string name="save">Сохранить</string>
    <string name="your_comment">Ваш комментарий</string>
    <string name="task">Наблюдаемое рабочее задание</string>
    <string name="experience">Стаж вождения</string>
    <string name="area">Участок/маршрут</string>
    <string name="experience_driver">Стаж вождения водителя</string>
    <string name="date_driving_start">Дата начала поездки</string>
    <string name="time_driving_start">Время начала поездки</string>
    <string name="date_driving_end">Дата окончания поездки</string>
    <string name="time_driving_end">Время окончания поездки</string>
    <string name="driving_observations">Наблюдения вождения</string>
    <string name="special">Специальный</string>
    <string name="guest">Для гостей</string>
    <string name="default1">Обычный</string>
    <string name="anonymous">Анонимный</string>
    <string name="questionnaire">Опрос</string>
    <string name="questionnaire_goal">Цель опроса</string>
    <string name="enter_questionnaire"><u>Пройти опрос?</u></string>
    <string name="enter_questionnaire2">Пройти опрос</string>
    <string name="questionnaire_is_passed"><u>Опрос уже пройден</u></string>

    <plurals name="new_notifications_count">
        <item quantity="one">%d новое уведомление</item>
        <item quantity="few">%d новых уведомления</item>
        <item quantity="other">%d новых уведомлений</item>
    </plurals>
</resources>