<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_nav_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_nav_list"
        android:title="@string/title_nav_list" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_nav_create"
        android:title="@string/title_nav_create" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_nav_notifications"
        android:title="@string/title_nav_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_nav_profile" />

</menu>