<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kz.kmg.qorgau.ui.home.HomeFragment"
        android:label="@string/title_nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="kz.kmg.qorgau.ui.list.ListFragment"
        android:label="@string/title_nav_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="kz.kmg.qorgau.ui.create.CreateFragment"
        android:label="@string/title_nav_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kz.kmg.qorgau.ui.notifications.NotificationsFragment"
        android:label="@string/title_nav_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="kz.kmg.qorgau.ui.profile.ProfileFragment"
        android:label="@string/title_nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>