<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/sv_work"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sfui_display_regular"
                android:text="@string/observer"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:background="@color/color_blue2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="30dp"
                android:text="@string/fname_lname"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:enabled="false"
                tools:text="Name Surname" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/org"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:enabled="false"
                tools:text="Too kmg kumkol" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/division"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_division"
                android:focusable="false"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:hint="@string/choose" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:hint="@string/choose_date"
                app:drawableEndCompat="@drawable/ic_calendar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:hint="@string/choose_time"
                app:drawableEndCompat="@drawable/ic_clock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/observable_count"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_observables_count"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:hint="@string/observable_count"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sfui_display_regular"
                android:text="@string/observable"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:background="@color/color_blue2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/obs_org"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_obs_company"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:hint="@string/choose" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/obs_org_div"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_obs_company_division"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:hint="@string/choose" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/observation_place"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_observation_place"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:hint="@string/choose"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/observation_place_specific"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_observation_place_specific"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:hint="@string/choose"
                android:inputType="text"
                android:maxLines="1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:text="@string/task"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_task"
                style="@style/AppTheme.EditText"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:hint="@string/task" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/margin_normal"
                android:clipToPadding="false"
                tools:itemCount="2"
                android:background="#F2F7FF"
                android:paddingHorizontal="@dimen/margin_small"
                tools:listitem="@layout/item_comment" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/b_save"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="@string/save"
                app:spinning_bar_color="#FFF"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginVertical="@dimen/margin_normal"
                style="@style/AppTheme.Button"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/b_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />
</FrameLayout>
