<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="30dp"
            android:textColor="@color/color_hard_gray"
            android:fontFamily="@font/sfui_display_medium"
            android:textSize="20sp"
            android:text="@string/system_login"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/color_blue2"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_height="1dp"/>

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:inputType="text"
            android:minHeight="50dp"
            android:maxLines="1"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="28dp"
            android:hint="@string/login"
            style="@style/AppTheme.EditText"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/password"
            style="@style/AppTheme.EditText"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="@font/sfui_display_regular"
            android:visibility="gone"
            android:textSize="17sp"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="28dp"
            android:textColor="@color/color_blue"
            android:text="@string/forgot_password"
            android:layout_height="wrap_content"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/b_enter"
            android:layout_marginTop="28dp"
            android:text="@string/enter"
            app:spinning_bar_color="@color/white"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="@dimen/margin_normal"
            style="@style/AppTheme.Button"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>