<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sfui_display_regular"
            android:text="@string/questionnaire"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="10dp"
            android:background="@color/color_blue2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sfui_display_regular"
            android:text="@string/questionnaire_goal"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfui_display_light"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            tools:text="Enjoy the beauty of italian cotton all over your body. This item will fit your body and warm you up all over and during spring. This item will fit your body and warm you up all over and during spring. " />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/sfui_display_regular"
            android:text="@string/enter_questionnaire"
            android:textColor="@color/color_strange_gray"
            android:textSize="17sp" />

        <Button
            android:id="@+id/b_start"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="50dp"
            android:text="@string/enter_questionnaire2" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>