<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/layout_create_page_header"/>
    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_department"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                android:hint="@string/department" />

            <TextView
                android:id="@+id/tv_choose_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/choose_organization"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:id="@+id/tv_no_departments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/no_departments"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="25dp"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>